fix: showing view product on mobile.

--- a/assets/scss/phase2/_make-components.scss
+++ b/assets/scss/phase2/_make-components.scss
@@ -1033,6 +1033,10 @@
     & > a {
         color: white;
     }
+
+    @include respond(mobile) {
+        display: none !important;
+    }
 }
 
 .make-number-input {
